[package]
name = "try-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
sha256 = "1.1.2"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
